docs: add CODEOWNERS

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "LICENSE": true
     },
     "files.associations": {
-        "LICENSE": "plaintext"
+        "LICENSE": "plaintext",
+        "CODEOWNERS": "ignore"
     }
 }
