--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -40,7 +40,7 @@ body:
   - type: textarea
     id: what-happened
     attributes:
-      label: What happened?
+      label: What Happened?
       description: Clearly and concisely describe the bug.
       placeholder: Tell us what happened.
     validations:
@@ -48,7 +48,7 @@ body:
   - type: textarea
     id: repro-steps
     attributes:
-      label: Steps to reproduce
+      label: Steps to Reproduce
       value: |
         1.
         2.
@@ -59,7 +59,7 @@ body:
   - type: textarea
     id: expected-behavior
     attributes:
-      label: Expected behavior
+      label: Expected Behavior
       description: What should have happened?
       placeholder: What did you expect to happen?
     validations:
